updated username and password settings due to an azure restriction

--- a/Two10.NugetFeed/Web.config
+++ b/Two10.NugetFeed/Web.config
@@ -100,8 +100,8 @@
     -->
     <add key="enableDelisting" value="false"/>
  
-    <add key="username" value=""/>
-    <add key="password" value=""/>
+    <add key="nuget_username" value=""/>
+    <add key="nuget_password" value=""/>
    
     
     <!--
